// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Textarea Auto Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 cUKiYJ sc-hiwPVj iuiXAh sc-ehCJOs kQJQfW"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 cUKiYJ sc-hiwPVj iuiXAh sc-ehCJOs kQJQfW"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 kLJdsH sc-hiwPVj jNwraa sc-ehCJOs kQJQfW"
      disabled=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Min Max Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 cUKiYJ sc-hiwPVj iuiXAh sc-ehCJOs kQJQfW"
      rows="4"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 cUKiYJ sc-hiwPVj efQfYE sc-ehCJOs kQJQfW"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Read Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 cUKiYJ sc-hiwPVj iuiXAh sc-ehCJOs kQJQfW"
      readonly=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 cUKiYJ sc-hiwPVj iuiXAh sc-ehCJOs kQJQfW"
      placeholder="Type something..."
    />
  </div>
</div>
`;
